<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background2"
    android:alpha="1.5"
    tools:context="com.example.android.adfeeder.MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            ads:adSize="MEDIUM_RECTANGLE"
        ads:adUnitId="ca-app-pub-8346913491042033/1967170485"
        android:layout_marginBottom="8dp">
    </com.google.android.gms.ads.AdView>


    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:textColorHint="@android:color/white"
        android:textColor="#fffafa"
        android:inputType="textCapWords"
        android:theme="@style/MyCheckBox"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/relevance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_relevant"
        android:textSize="24sp"
        android:textColor="#fffafa"
        android:fontFamily="bold"
        android:layout_marginBottom="8dp" />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="#fffafa"
            android:textSize="24sp"
            android:layout_gravity="end"
            android:layout_weight="1"/>
    <SeekBar
        android:id="@+id/seekbar_relevance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:min="0"
        android:max="10"
        android:progress="5"
        android:layout_marginBottom="8dp"
        android:theme="@style/MyCheckBox"
        android:layout_weight="15"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10"
            android:textColor="#fffafa"
            android:textSize="24sp"
            android:layout_weight="1"/>

    </android.support.v7.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/feeling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="#fffafa"
        android:text="@string/feeling"
        android:layout_marginBottom="8dp"
        />

    <CheckBox
        android:id="@+id/privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="#fffafa"
        android:theme="@style/MyCheckBox"
        android:text="@string/privacy_intrusion"/>

    <CheckBox
        android:id="@+id/love"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="#fffafa"
        android:theme="@style/MyCheckBox"
        android:text="@string/love"/>

    <CheckBox
        android:id="@+id/annoyed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="#fffafa"
        android:theme="@style/MyCheckBox"
        android:text="@string/annoyed"/>

    <CheckBox
        android:id="@+id/good_surprise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="#fffafa"
        android:theme="@style/MyCheckBox"
        android:text="@string/pleasant"/>

    <CheckBox
        android:id="@+id/fml"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="#fffafa"
        android:theme="@style/MyCheckBox"
        android:text="@string/fml"/>

    <CheckBox
        android:id="@+id/seriously"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:paddingBottom="16sp"
        android:textColor="#fffafa"
        android:theme="@style/MyCheckBox"
        android:text="@string/srsly"/>

    <TextView
        android:id="@+id/visually"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="#fffafa"
        android:text="@string/looks"/>

<RadioGroup
    android:id="@+id/rg1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="16sp">
    <RadioButton
        android:id="@+id/yes1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="#fffafa"
        android:theme="@style/MyCheckBox"
        android:text="@string/yes"/>

    <RadioButton
        android:id="@+id/no1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="#fffafa"
        android:theme="@style/MyCheckBox"
        android:text="@string/no"/>

    <RadioButton
        android:id="@+id/idk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="#fffafa"
        android:theme="@style/MyCheckBox"
        android:text="@string/idk"/>

    <RadioButton
        android:id="@+id/sod_off"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="#fffafa"
        android:theme="@style/MyCheckBox"
        android:text="@string/sod_off"/>
</RadioGroup>

    <TextView
        android:id="@+id/will_they_use"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="#fffafa"
        android:text="@string/would_you_use"/>

    <RadioGroup
        android:id="@+id/rg2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textColor="#fffafa"
        android:paddingBottom="16sp">
    <RadioButton
        android:id="@+id/yes2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="#fffafa"
        android:theme="@style/MyCheckBox"
        android:text="@string/yes"/>

    <RadioButton
        android:id="@+id/no2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="#fffafa"
        android:theme="@style/MyCheckBox"
        android:text="@string/no"/>

    <RadioButton
        android:id="@+id/maybe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="#fffafa"
        android:theme="@style/MyCheckBox"
        android:text="@string/maybe"/>

    <RadioButton
        android:id="@+id/using"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="#fffafa"
        android:theme="@style/MyCheckBox"
        android:text="@string/too_late"/>
    </RadioGroup>

    <Button
        android:id="@+id/check_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/check"
        android:layout_gravity="center"
        android:onClick="Summarise"
        android:layout_marginBottom="8dp"
        />

    <TextView
        android:id="@+id/summary_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="#fffafa"
        android:text="@string/thanks"
        android:textAlignment="center"
        android:layout_marginBottom="8dp"
        />

</LinearLayout>
</ScrollView>

